add 3 examples to const.html

--- a/html/const.html
+++ b/html/const.html
@@ -325,8 +325,9 @@ function myfn() {
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE ONE
-  </pre><!-- code-content -->
+'use strict'
+const async = 10;
+console.log(async); </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -337,23 +338,49 @@ INSERT CODE ONE
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT ONE(small view) 
-</pre><!-- small-view -->
+10 </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT ONE(wide view) 
-</pre><!-- wide-view -->
+10 </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
-
-
 
                 <article>
                     <h1 class="count">Code Example</h1>
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE THREE
+const not = 10;
+console.log(not)</pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+10</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+10</pre><!-- wide-view -->
+                        <!--ususally inserted before details-console end tag-->
+                        <dl class="details-dl">
+                            <dt>Note</dt>
+                            <dd>'not' is not a reserved keyword</dd>
+                        </dl>
+                    </details><!--details CONSOLE -->
+
+                </article>
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+const myconst = void 0;
+console.log(myconst)
   </pre><!-- code-content -->
                     </details><!--details CODE-->
 
@@ -365,14 +392,13 @@ INSERT CODE THREE
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT THREE (small view) 
-</pre><!-- small-view -->
+undefined </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT THREE (wide view) 
-</pre><!-- wide-view -->
+undefined </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
+                <!--here-->
 
                 <article>
                     <h1 class="count refs-heading">References</h1>
