modify and correct mnemonics in reserved_keywords.html

--- a/html/reserved_keywords.html
+++ b/html/reserved_keywords.html
@@ -225,7 +225,7 @@ continue </pre><!-- wide-view -->
                         <!--ususally inserted before details-console end tag-->
                         <dl class="details-dl">
                             <dt>Note</dt>
-                            <dd>const catch class case continue</dd>
+                            <dd>catch class case const continue</dd>
                         </dl>
                     </details><!--details CONSOLE -->
 
@@ -321,7 +321,7 @@ function </pre><!-- wide-view -->
                         <!--ususally inserted before details-console end tag-->
                         <dl class="details-dl">
                             <dt>Note</dt>
-                            <dd>finally function for false</dd>
+                            <dd>for false function finally</dd>
                         </dl>
                     </details><!--details CONSOLE -->
 
@@ -466,7 +466,7 @@ typeof </pre><!-- wide-view -->
                         <!--ususally inserted before details-console end tag-->
                         <dl class="details-dl">
                             <dt>Note</dt>
-                            <dd>try this throw true typeof</dd>
+                            <dd>try this typeof throw true</dd>
                         </dl>
                     </details><!--details CONSOLE -->
 
